Update sample html

--- a/public/my_pokemons/my_pokemons.html
+++ b/public/my_pokemons/my_pokemons.html
@@ -26,7 +26,10 @@
   <div id="monster-ball-3">
     <div class="monster-ball-button"></div>
   </div>
-
+  <section class="my-pokemon-stats">
+    <h2>これまでにゲットしたポケモンの数</h2>
+    <p>5 / 800 匹</p>
+  </section>
   <section class="my-pokemons">
     <div class="pokemon">
       <img src="../images/001.png" alt="">
